--- a/api/package.json
+++ b/api/package.json
@@ -1,19 +1,24 @@
 {
-  "name": "velozity-api",
-  "private": true,
+  "name": "velozity-uid-ops",
   "version": "1.0.0",
-  "type": "commonjs",
-  "engines": {
-    "node": "20.17.0"
-  },
+  "private": true,
+  "description": "VelOzity Pinpoint UID Ops backend (Express + SQLite + SSE)",
+  "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "postinstall": "npm rebuild better-sqlite3 --force"
+    "dev": "nodemon --watch server.js server.js",
+    "health": "node -e \"require('http').get(process.env.API || 'http://localhost:4000/health', r=>r.pipe(process.stdout))\""
+  },
+  "engines": {
+    "node": ">=18"
   },
   "dependencies": {
-    "express": "^4.19.2",
+    "better-sqlite3": "^9.4.3",
     "cors": "^2.8.5",
-    "better-sqlite3": "^12.2.0",
-    "exceljs": "^4.4.0"
+    "exceljs": "^4.4.0",
+    "express": "^4.19.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
