--- a/render.yaml
+++ b/render.yaml
@@ -1,17 +1,29 @@
+# render.yaml — VelOzity Pinpoint (Node + SQLite + SSE)
+
 services:
   - type: web
-    name: uid-ops-backend
-    env: node
-    buildCommand: "npm install"
-    startCommand: "node server.js"
+    name: veloc-uid-ops
+    runtime: node
+    plan: free
+    autoDeploy: true
+    buildCommand: npm ci
+    startCommand: node server.js
     envVars:
+      - key: NODE_VERSION
+        value: 18
+      - key: NODE_ENV
+        value: production
       - key: ALLOWED_ORIGIN
-        value: https://<your-netlify-site>.netlify.app
+        # TODO: set to your exact frontend origin (comma-separate if multiple)
+        value: https://vasops.netlify.app
       - key: DB_DIR
-        value: /var/data
-      - key: npm_config_build_from_source
-        value: "true"
-    disks:
-      - name: data
-        mountPath: /var/data
-        sizeGB: 1
+        value: /opt/render/project/src/data
+      - key: DB_FILE
+        value: /opt/render/project/src/data/uid_ops.sqlite
+      - key: TZ
+        value: America/Chicago
+    healthCheckPath: /health
+    disk:
+      name: uid-ops-data
+      mountPath: /opt/render/project/src/data
+      sizeGB: 2
